Add backgroung image, edit copy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
    <mat-icon>menu</mat-icon>
   </button>
-  <span>Home</span>
+  <span>Paint Me A Picture</span>
   <span class="example-spacer"></span>
   <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
     <mat-icon>favorite</mat-icon>
@@ -16,10 +16,15 @@
   <app-slogan></app-slogan>
 
   <div>
-    <p>
-      Experience the joy of reliving your precious moments through our innovative photo sharing platform. With our user-friendly interface, simply upload and share your memories with family and friends. Whether it’s a wedding, a birthday or a family vacation, we make it easy to capture the moment and share the memories. Sign up today and start sharing your precious moments!
+    <p class="subtitle">
+      Capture Your Life: Freeze your moments in time and share your memories with the world. Our platform makes it easy to store, organize, and share your photos, letting you relive your favorite moments and connect with others. Start capturing memories today!
     </p>
   </div>
 </div>
+
+
+<img class="bgImage-top" src="https://source.unsplash.com/PhciG8fpRKw" width="100%">
+<!-- <img class="bgImage" src="https://source.unsplash.com/y8Ngwq34_Ak" width="100%">
+<img class="bgImage" src="https://source.unsplash.com/Cecb0_8Hx-o" width="100%"> -->
 
 <router-outlet></router-outlet>
