Add more content, create text component boiler plate

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,13 +12,34 @@
   </button>
 </mat-toolbar>
 
-<div class="landing-page">
-  <app-slogan></app-slogan>
+<div class="landingPage">
+  <div class="landingPage-content">
+    <app-slogan></app-slogan>
+    <div>
+      <p class="subtitle">
+        Capture Your Life: Freeze your moments in time and share your memories with the world. Our platform makes it easy to store, organize, and share your photos, letting you relive your favorite moments and connect with others. Start capturing memories today!
+      </p>
+    </div>
+  </div>
 
-  <div>
-    <p class="subtitle">
-      Capture Your Life: Freeze your moments in time and share your memories with the world. Our platform makes it easy to store, organize, and share your photos, letting you relive your favorite moments and connect with others. Start capturing memories today!
-    </p>
+  <div class="landingPage-content-carousel">
+    <div class="landingPage-content aboutUsDiv">
+      <h2>About Us</h2>
+      <div>
+        <h3>This is a test project that serves as a playground for the developers.</h3>
+      </div>
+
+      <mat-divider style="border-top-color: grey"></mat-divider>
+
+      <h2>...</h2>
+      <div class="linkGroups">
+        <app-text>Sophie</app-text>
+        <app-text>Karen</app-text>
+        <app-text>Kimione</app-text>
+        <app-text>Ram</app-text>
+        <app-text>Sienna</app-text>
+      </div>
+    </div>
   </div>
 </div>
 
