--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,9 +14,26 @@
   flex: 1 1 auto;
 }
 
-.landing-page {
+.landingPage {
   // background-color: #EBEBEB;
-  padding: $spacing-large;
+
+  &-content {
+    padding: $spacing-large;
+    height: 330px;
+
+    @media screen and (min-width: 480px) {
+      height: 480px;
+    }
+
+    &-carousel {
+      background-color: 	#DBDBDB;
+      height: 330px;
+
+      @media screen and (min-width: 480px) {
+        height: 480px;
+      }
+    }
+  }
 }
 
 .subtitle {
@@ -31,5 +48,23 @@
     position: absolute;
     top: 0;
     z-index: -1;
+  }
+}
+
+.link {
+  margin-right: $spacing-mid;
+}
+
+.aboutUsDiv {
+  text-align: center;
+}
+
+.linkGroups {
+  display: flex;
+  justify-content: space-between;
+
+  @media screen and (min-width: 480px) {
+    justify-content: space-between;
+    max-width: 480px;
   }
 }
